kubernetes/apps/selfhosted/smtp-relay/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay-networkpolicy
spec:
  endpointSelector:
    matchLabels:
      name: smtp-relay
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.120.0/22
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
    - fromCIDRSet:
        - cidr: 192.168.132.0/22
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
    - fromCIDRSet:
        - cidr: 192.168.112.0/22
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
